--- a/src/index.html
+++ b/src/index.html
@@ -44,11 +44,12 @@
 
 
         <div class="cards">
-          
+
           <div class="card">
             <div class="card-horizontal">
               <div class="img-square-wrapper">
-                <img src="https://a0.muscache.com/im/pictures/e6c4b347-49c7-4840-8c00-df36a2a273da.jpg?aki_policy=x_large"
+                <img
+                  src="https://a0.muscache.com/im/pictures/e6c4b347-49c7-4840-8c00-df36a2a273da.jpg?aki_policy=x_large"
                   class="img-fluid" alt="...">
               </div>
               <div class="card-body">
@@ -96,8 +97,8 @@
 
 
   <script type="text/javascript" src="./scripts/datepicker.js"></script>
-
   <script type="text/javascript" src="./scripts/createCard.js"></script>
+  
 </body>
 
 </html>
