--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
     integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
   <link rel="stylesheet" type="text/css" href="style.css">
-  <meta name="description" ontent="Site feito para o primeiro desafio hiring coders da gama academy">
+  <meta name="description" content="Site feito para o primeiro desafio hiring coders da gama academy">
   <meta name="author" content="Antonio Thiele">
   <meta name="keywords" content="COVID, hiring coders, desafio">
 </head>
@@ -19,14 +19,14 @@
       </div>
       <div class="col-md-8">
         <form action="" class="searchBar">
-          <select class="custom-select">
+          <select class="custom-select" id="select">
             <option selected>Open this select menu</option>
             <option value="1">One</option>
             <option value="2">Two</option>
             <option value="3">Three</option>
           </select>
-          <input type="text" name="datetimes" />
-          <button type="submit" class="btn btn-primary mb-2">Buscar</button>
+          <input class="custom-select tipePicker" type="text" name="datetimes" />
+          <button type="submit" class="btn btn-primary">Buscar</button>
         </form>
       </div>
       <div class="col-md-2">
@@ -41,29 +41,12 @@
           <h3>Subtítulo</h3>
         </div>
 
-
-
-        <div class="cards">
-
-          <div class="card">
-            <div class="card-horizontal">
-              <div class="img-square-wrapper">
-                <img
-                  src="https://a0.muscache.com/im/pictures/e6c4b347-49c7-4840-8c00-df36a2a273da.jpg?aki_policy=x_large"
-                  class="img-fluid" alt="...">
-              </div>
-              <div class="card-body">
-                <h5 class="card-title">Apartment in Son Parc, wonderful views.</h4>
-                  <p class="card-text">Tipo: Apartamento.</p>
-                  <p class="card-text">Valor: $455</p>
-              </div>
-            </div>
-          </div>
-
-        </div>
+        <div class="cards"></div>
 
         <div class="contentFooter">
-          <h3>Subtítulo</h3>
+            <nav id="pagination_nav">
+              <ul class="pagination pagination-sm"></ul>
+            </nav>
         </div>
 
       </div>
@@ -98,7 +81,7 @@
 
   <script type="text/javascript" src="./scripts/datepicker.js"></script>
   <script type="text/javascript" src="./scripts/createCard.js"></script>
-  
+
 </body>
 
 </html>
