--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,7 @@
   <meta name="description" content="Site feito para o primeiro desafio hiring coders da gama academy">
   <meta name="author" content="Antonio Thiele">
   <meta name="keywords" content="COVID, hiring coders, desafio">
+  <meta charset="UTF-8">
 </head>
 
 <body>
@@ -20,13 +21,16 @@
       <div class="col-md-8">
         <form action="" class="searchBar">
           <select class="custom-select" id="select">
-            <option selected>Open this select menu</option>
-            <option value="1">One</option>
-            <option value="2">Two</option>
-            <option value="3">Three</option>
+            <option selected>Todas as localidades</option>
+            <option value="São Paulo">São Paulo</option>
+            <option value="Rio de Janeiro">Rio de Janeiro</option>
+            <option value="Espírito Santo">Espírito Santo</option>
+            <option value="Bahia">Bahia</option>
+            <option value="México">México</option>
+            <option value="Son Parc">Son Parc</option>
           </select>
-          <input class="custom-select tipePicker" type="text" name="datetimes" />
-          <button type="submit" class="btn btn-primary">Buscar</button>
+          <input class="custom-select tipePicker" id="timeImput" type="text" name="datetimes" />
+          <button type="button" class="btn btn-primary" id="searchButton">Buscar</button>
         </form>
       </div>
       <div class="col-md-2">
@@ -38,15 +42,20 @@
       <div class="col-md-8">
 
         <div class="contentHeader">
-          <h3>Subtítulo</h3>
+          <h3>Apartamentos encontrados com calculo de preço e diária:</h3>
         </div>
 
         <div class="cards"></div>
 
         <div class="contentFooter">
-            <nav id="pagination_nav">
-              <ul class="pagination pagination-sm"></ul>
-            </nav>
+          <nav id="pagination_nav">
+            <ul class="pagination pagination-sm"></ul>
+          </nav>
+          <select class="custom-select" id="selectPagination">
+            <option value="10">10 apartamentos por página</option>
+            <option selected value="5">5 apartamentos por página</option>
+            <option value="3">3 apartamentos por página</option>
+          </select>
         </div>
 
       </div>
