--- a/src/index.html
+++ b/src/index.html
@@ -63,8 +63,8 @@
       <div class="col-md-4 sideMap ">
         <div class="map sticky-top">
           <iframe
-            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d13873.211657398777!2d-43.18818857622493!3d-22.930372706056698!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9bde559108a05b%3A0x50dc426c672fd24e!2sRio%20de%20Janeiro%2C%20RJ!5e0!3m2!1spt-BR!2sbr!4v1588723492183!5m2!1spt-BR!2sbr"
-            frameborder="0" allowfullscreen="" aria-hidden="false"></iframe>
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d31760465.329205003!2d-69.71823501470723!3d-13.657159891786419!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9c59c7ebcc28cf%3A0x295a1506f2293e63!2sBrasil!5e0!3m2!1spt-BR!2sbr!4v1588986594628!5m2!1spt-BR!2sbr"
+            id="iframeMap" frameborder="0" allowfullscreen="" aria-hidden="true"></iframe>
         </div>
       </div>
 
@@ -89,7 +89,7 @@
 
 
   <script type="text/javascript" src="./scripts/datepicker.js"></script>
-  <script type="text/javascript" src="./scripts/createCard.js"></script>
+  <script type="text/javascript" src="./scripts/scripts.js"></script>
 
 </body>
 
