--- a/src/index.html
+++ b/src/index.html
@@ -56,6 +56,8 @@
             <option selected value="5">5 apartamentos por página</option>
             <option value="3">3 apartamentos por página</option>
           </select>
+
+          <a href="https://github.com/antoniocarlos" target="_blank">Github</a>
         </div>
 
       </div>
